fix: Refactorización total de escalabilidad y rendimiento al Servicio y métodos de generación de reportes para sessiones(PDF)